Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-109443

Android: tst_QVideoWidget timeout

XMLWordPrintable

    • Android
    • f6b0e3a33 (dev), 6f9762c51 (6.4), 40c7d5438 (6.5)
    • 2022wk50FOQtforAndroid

      tst_QVideoWidget times out using Android default backend.

      QVideoWidget gets blocked because of a hanging thread on QAndroidTextureVideoOutput. This thread waits() on the destructor forever. Adding a timeout, will crash because of "Cannot make QOpenGLContext current in a different thread" in makeCurrent function.

      Notice that this does not happen using the example on the device, and it is not happening when using the FFmpeg backend, so it is postponed for later investigation.

        For Gerrit Dashboard: QTBUG-109443
        # Subject Branch Project Status CR V

            samuelmira Samuel Mira
            samuelmira Samuel Mira
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes